--- a/src/app/header/header-home/header-home.component.html
+++ b/src/app/header/header-home/header-home.component.html
@@ -1,34 +1,38 @@
 <header class="navbar fixed-top">
-    <div class="row" style="width:16vw;" id="header">
-        <div class="row text-right small" style="position: absolute;text-align: right;bottom: -15px;left: 15vw;">
-            <ul style="list-style-type: none;">
-                <li>Tanggal Bisnis</li>
-                <li class="font-weight-bold text-info">{{tanggal | date:'dd/MM/yyyy'}}</li>
-                <li>Last Login</li>
-                <li class="font-weight-bold text-info">{{tanggal | date:'dd/MM/yyyy'}}</li>
-            </ul>
-        </div>
-        <div class="row  text-right small" style="position: absolute;text-align: right;bottom: -15px;left: 23vw;">
-            <ul style="list-style-type: none;">
-                <li>Status</li>
-                <li class="font-weight-bold text-info">Online</li>
-                <li>IP Anda :</li>
-                <li class="font-weight-bold text-info">xxx.xxx.xxx.xxx</li>
-            </ul>
-        </div>
-        <div class="row text-right small" style="position: absolute;text-align: right;bottom: -15px;left: 32vw;">
-            <ul style="list-style-type: none;">
-                <li></li>
-                <li></li>
-                <li>Cabang :</li>
-                <li class="font-weight-bold text-blue text-info">88|Cabang Utama</li>
-            </ul>
-        </div>
-        <div class="row text-info text-right small" style="position: absolute;text-align: right;bottom: 0px;left: 45vw;">
-            <a class="text-muted" (click)="fungsi()"><i class="fa fa-sign-out text-muted" role="button"></i>Sign Out</a>
-        </div>
-        <div class="row font-weight-bold text-right" style="position: absolute;text-align: right;top: 35px;right: 20px;">
-            <p class="text-light">Selamat Datang <br> Jateng SP | Jateng SP</p>
-        </div>
+  <div class="row" style="width:16vw;" id="header">
+    <div class="row text-right small" style="position: absolute;text-align: right;bottom: -15px;left: 15vw;">
+      <ul style="list-style-type: none;">
+        <li>Tanggal Bisnis</li>
+        <li class="font-weight-bold text-info">{{tanggal | date:'dd/MM/yyyy'}}</li>
+        <li>Last Login</li>
+        <li class="font-weight-bold text-info">{{tanggal | date:'dd/MM/yyyy'}}</li>
+      </ul>
     </div>
+    <div class="row  text-right small" style="position: absolute;text-align: right;bottom: -15px;left: 23vw;">
+      <ul style="list-style-type: none;">
+        <li>Status</li>
+        <li class="font-weight-bold text-info">Online</li>
+        <li>IP Anda :</li>
+        <li class="font-weight-bold text-info">xxx.xxx.xxx.xxx</li>
+      </ul>
+    </div>
+    <div class="row text-right small" style="position: absolute;text-align: right;bottom: -15px;left: 32vw;">
+      <ul style="list-style-type: none;">
+        <li></li>
+        <li></li>
+        <li>Cabang :</li>
+        <li class="font-weight-bold text-blue text-info">88|Cabang Utama</li>
+      </ul>
+    </div>
+    <div class="row text-info text-right small" style="position: absolute;text-align: right;bottom: 0px;left: 45vw;">
+      <a class="text-muted" (click)="fungsi()"><i class="fa fa-sign-out text-muted" role="button"></i>Sign Out</a>
+      <button *ngIf="!isUserLoggedIn">Login</button>
+      <button *ngIf="isUserLoggedIn">Sign Out</button>
+    </div>
+    <div class="row font-weight-bold text-right" style="position: absolute;text-align: right;top: 35px;right: 20px;">
+      <p class="text-light">Selamat Datang <br> Jateng SP | Jateng SP</p>
+    </div>
+  </div>
+
+
 </header>
