--- a/src/app/teller-in/teller-in-penarikan-tunai/teller-in-penarikan-tunai.component.html
+++ b/src/app/teller-in/teller-in-penarikan-tunai/teller-in-penarikan-tunai.component.html
@@ -12,22 +12,25 @@
               <div class="card-body">
                 <form>
                   <table class="table table-borderless table-sm">
-                    <tr style="height: 10px;">
-                      <td style="width: 190px;" class="font-weight-normal">Tanggal Valuta</td>
-                      <td style="width: 5px;">:</td>
-                      <td style="width: 500px;"><input type="text" name="tglvaluta" id="tglvaluta" style="width: 250px;" class="form-control form-control-sm"></td>
-                      <td style="width: 350px;"></td>
-                      <td style="width: 5px;"></td>
-                      <td style="width: 5px;"></td>
-                      <td colspan="2"></td>
+                        <tr style="height: 10px;">
+                            <td style="width: 270px;" class="font-weight-normal">Tanggal Valuta</td>
+                            <td style="width: 5px;">:</td>
+                            <td style="width: 500px;"><input type="text" name="tglvaluta" id="tglvaluta" style="width: 250px;" class="form-control form-control-sm"></td>
+                            <td style="width: 350px;"></td>
+                            <td style="width: 5px;"></td>
+                            <td style="width: 5px;"></td>
+                            <td colspan="2"></td>
+                        </tr>
+                    <tr>
+                        <td><input style="font-weight: bold" type="radio" id="radio1" name="radio1" value="option1" checked> Nomor Referensi</td>
+                        <td style="width: 5px;">:</td>
+                        <td style="width: 500px;"><input type="text" name="norekening" id="norekening" style="width: 250px;" class="form-control form-control-sm"></td>
                     </tr>
                     <tr>
-                        <td><input class="form-check-input" type="radio" id="radio1" name="radio1" value="option1" checked>Nomor Referensi</td>
+                        <td><input  type="radio" id="radio1" name="radio1" value="option1"> Nomor Cheque</td>
+                        <td style="width: 5px;">:</td>
                     </tr>
-                    <tr>
-                        <td></td>
-                        <td><input class="form-check-input" type="radio" id="radio1" name="radio1" value="option1">Nomor Cheque</td>
-                    </tr>
+                    <td colspan="2"></td>
                     <tr style="height: 10px;">
                       <td style="width: 190px;" class="font-weight-normal">Nomor Rekening</td>
                       <td style="width: 5px;">:</td>
