--- a/src/app/teller-in/teller-in-sinkron-fin/teller-in-sinkron-fin.component.html
+++ b/src/app/teller-in/teller-in-sinkron-fin/teller-in-sinkron-fin.component.html
@@ -6,48 +6,35 @@
     <div id="outer" class="d-flex flex-column flex-grow">
       <div class="card">
         <div class="card-body">
-          <h5 class="card-title">SINKRONISASI TRANSAKSI FINANCIAL RETAIL</h5>
+          <h5>SINKRONISASI TRANSAKSI FINANCIAL RETAIL</h5>
           <!-- Default form contact -->
-          <form class="text-center border border-light p-5">
-            <table>
-                <tr>
-                  <td class="font-weight-normal">Kode Transaksi</td>
-                  <td>:</td>
-                  <td>
-                    <select class="custom-select" name="optmatauang" id="optmatauang" style="width: 200px;">
-                      <option selected>Pilih Salah Satu</option>
-                      <option value="1">One</option>
-                      <option value="2">Two</option>
-                      <option value="3">Three</option>
-                    </select>
-                  </td>
-                </tr>
-                <tr>
-                  <td style="width: 130px;"></td>
-                  <td style="width: 30px;"></td>
-                  <td>
-                    <button type="button" class="btn btn-primary btn-sm"><i class="fa fa-save" aria-hidden="true"></i>
-                      &nbsp;Proses</button>
-                    <button type="button" class="btn btn-danger btn-sm"><i class="fa fa-close" aria-hidden="true"></i>Kembali</button>
-                  </td>
-                  <td colspan="2"></td>
-                </tr>
-              <!-- <tr>
-                <td style="width: 130px;"></td>
-                <td style="width: 30px;"></td>
-                <td>
-                  <button type="button" class="btn btn-primary btn-sm"><i class="fa fa-save" aria-hidden="true"></i>
-                    &nbsp;Ambil</button>
-                  <button type="button" class="btn btn-danger btn-sm"><i class="fa fa-close" aria-hidden="true"></i>&nbsp;&nbsp;Kembali</button>
-                </td>
-                <td colspan="2"></td>
-              </tr> -->
-            </table>
-          </form>
+          <div class="card">
+            <div class="card-body">
+              <form>
+                <table class="table table-borderless table-sm">
+                  <tr>
+                    <td class="font-weight-normal" style="width: 180px;">Kode Transaksi</td>
+                    <td style="width: 17px;">:</td>
+                    <td>
+                      <select class="custom-select" name="optkodetran" id="optkodetran" style="width: 200px;">
+                        <option selected>Pilih Salah Satu</option>
+                        <option value="1">One</option>
+                        <option value="2">Two</option>
+                        <option value="3">Three</option>
+                      </select>
+                    </td>
+                   </tr>
+                </table>
+                <div class="d-flex justify-content-center">
+                  <button type="button" class="btn btn-primary btn-rounded">Proses</button>
+                  <button type="button" class="btn btn-primary btn-rounded">Kembali</button>
+                </div>
+              </form>
+            </div>
+          </div>
           <br><br><br>
         </div>
       </div>
-
     </div>
   </div>
 </div>
