--- a/src/app/kartu/cari-kartuatm/cari-kartuatm.component.html
+++ b/src/app/kartu/cari-kartuatm/cari-kartuatm.component.html
@@ -11,7 +11,7 @@
           <div class="card">
             <div class="card-body">
               <form>
-                  <h5>MASUKAN KRITERIA PENCARIAN</h5>
+                  <h4>MASUKAN KRITERIA PENCARIAN</h4>
                 <table class="table table-borderless">
                   <tr>
                     <td style="width: 150px;" class="font-weight-normal">Pilih Kriteria</td>
@@ -27,9 +27,10 @@
                     <td class="font-weight-normal">Masukkan Nilai</td>
                     <td>:</td>
                     <td><input type="text" class="form-control form-control-sm" style="width: 250px;"></td>
-                    <td>
-                      <button type="button" class="btn btn-primary btn-rounded btn-sm">Cari</button>
-                    </td>
+                    <div class="d-flex justify-content-center">
+                        <button type="button" class="btn btn-primary btn-rounded">Cari</button>
+                        <button type="button" class="btn btn-primary btn-rounded">Kembali</button>
+                      </div>
                   </tr>
                 </table>
               </form>
