--- a/src/app/kartu/cari-kartuatm/cari-kartuatm.component.html
+++ b/src/app/kartu/cari-kartuatm/cari-kartuatm.component.html
@@ -11,33 +11,34 @@
           <div class="card">
             <div class="card-body">
               <form>
-                  <h4>MASUKAN KRITERIA PENCARIAN</h4>
+                <h6>MASUKAN KRITERIA PENCARIAN</h6>
                 <table class="table table-borderless">
                   <tr>
                     <td style="width: 150px;" class="font-weight-normal">Pilih Kriteria</td>
                     <td style="width: 5px;">:</td>
-                    <td><input class="font-weight-normal" type="radio" id="radio1" name="radio1" value="option1" checked>Nama</td>
+                    <td><input class="font-weight-normal" type="radio" id="radio1" name="radio1" value="option1"
+                        checked> Nomor Kartu</td>
                   </tr>
                   <tr>
                     <td></td>
                     <td></td>
-                    <td><input class="font-weight-normal" type="radio" id="radio1" name="radio1" value="option1">User ID</td>
+                    <td><input class="font-weight-normal" type="radio" id="radio1" name="radio1" value="option1"> Nama pada Kartu</td>
                   </tr>
                   <tr>
                     <td class="font-weight-normal">Masukkan Nilai</td>
                     <td>:</td>
                     <td><input type="text" class="form-control form-control-sm" style="width: 250px;"></td>
-                    <div class="d-flex justify-content-center">
-                        <button type="button" class="btn btn-primary btn-rounded">Cari</button>
-                        <button type="button" class="btn btn-primary btn-rounded">Kembali</button>
-                      </div>
                   </tr>
                 </table>
+                <div class="d-flex justify-content-center">
+                  <button type="button" class="btn btn-primary btn-rounded">Cari</button>
+                  <button type="button" class="btn btn-primary btn-rounded">Kembali</button>
+                </div>
               </form>
             </div>
           </div>
           <br>
-         </div>
+        </div>
       </div>
     </div>
   </div>
