--- a/src/app/pembayaran/bayar-mpn/bayar-mpn.component.html
+++ b/src/app/pembayaran/bayar-mpn/bayar-mpn.component.html
@@ -13,8 +13,8 @@
                 <form>
                   <table class="table table-borderless table-sm">
                     <tr>
-                      <td class="font-weight-normal">Kode MPN</td>
-                      <td>:</td>
+                      <td class="font-weight-normal" style="width: 155px;">Kode MPN</td>
+                      <td style="width: 10px;">:</td>
                       <td>
                         <select class="custom-select" name="optkodempn" id="optkodempn" style="width: 250px;">
                           <option selected>Pilih Salah Satu</option>
