--- a/src/app/pembayaran/bayar-pkb/bayar-pkb.component.html
+++ b/src/app/pembayaran/bayar-pkb/bayar-pkb.component.html
@@ -23,12 +23,12 @@
                     </tr>
                     <tr>
                       <td class="font-weight-normal">Tanggal Valuta</td>
-                      <td>:</td>
-                      <div class="input-group date" data-provide="datepicker">
-                          <input type="text" class="form-control">
-                          <div class="input-group-addon">
+                      <td style="width: 10px;">:</td>
+                      <div class="input-group-addon">
+                          <input class="form-control form-control-s" type="date"  style="width: 250px;">
+                          <!-- <div class="input-group-addon">
                               <span class="glyphicon glyphicon-th"></span>
-                          </div>
+                          </div> -->
                       </div>
                     </tr>
                   </table>
