--- a/src/app/pembayaran/billpayment/billpayment.component.html
+++ b/src/app/pembayaran/billpayment/billpayment.component.html
@@ -13,10 +13,10 @@
                 <form>
                   <table class="table table-borderless table-sm">
                     <tr>
-                      <td class="font-weight-normal">Biller Payment</td>
-                      <td>:</td>
+                      <td class="font-weight-normal" style="width: 125px;">Biller Payment</td>
+                      <td style="width: 5px;">:</td>
                       <td>
-                        <select class="custom-select" name="optbilpay" id="optbilpay" style="width: 250px;">
+                        <select class="custom-select" name="optbilpay" id="optbilpay" style="width: 350px;">
                           <option selected>Pilih Salah Satu</option>
                           <option value="1">One</option>
                           <option value="2">Two</option>
@@ -26,9 +26,9 @@
                     </tr>
                     <tr>
                         <td class="font-weight-normal">Payment Code</td>
-                        <td>:</td>
+                        <td style="width: 5px;">:</td>
                         <td>
-                          <select class="custom-select" name="optbilpay" id="optbilpay" style="width: 125px;">
+                          <select class="custom-select" name="optbilpay" id="optbilpay" style="width: 200px;">
                             <option selected>Pilih Salah Satu</option>
                             <option value="1">One</option>
                             <option value="2">Two</option>
@@ -44,7 +44,7 @@
                 </form>
               </div>
             </div>
-            <br><br><br>
+            <br><br><br><br><br>
           </div>
         </div>
       </div>
