--- a/src/app/cashdrawer/denominasi/denominasi.component.html
+++ b/src/app/cashdrawer/denominasi/denominasi.component.html
@@ -1,3 +1,106 @@
-<p>
-  denominasi works!
-</p>
+<app-home-nav></app-home-nav>
+<!--Main layout-->
+<div style="margin: 20px;">
+    <!-- Start your project here-->
+    <div class="d-flex flex-column h-100">
+        <div id="outer" class="d-flex flex-column flex-grow">
+            <div class="card">
+                <div class="card-body">
+                    <h5>DENOMINASI</h5>
+                    <!-- Default form contact -->
+                    <div class="card">
+                        <div class="card-body">
+                            <form>
+                                <h6>DAFTAR SALDO KAS TELLER</h6>
+                                <table class="table table-borderless table-sm">
+                                    <tr>
+                                        <td class="font-weight-normal">Mata Uang</td>
+                                        <td>:</td>
+                                        <td>
+                                            <select class="custom-select" name="optmatauang" id="optmatauang" style="width: 200px;">
+                                                <option selected>Pilih Salah Satu</option>
+                                                <option value="1">One</option>
+                                                <option value="2">Two</option>
+                                                <option value="3">Three</option>
+                                            </select>
+                                        </td>
+                                    </tr>
+                                    <tr style="height: 10px;">
+                                        <td style="width: 270px;" class="font-weight-normal">Saldo Awal</td>
+                                        <td style="width: 5px;">:</td>
+                                        <td style="width: 500px;"><input type="text" name="saldoawal" id="saldoawal"
+                                                style="width: 250px;" class="form-control form-control-sm"></td>
+                                        <td style="width: 350px;"></td>
+                                        <td style="width: 5px;"></td>
+                                        <td style="width: 5px;"></td>
+                                        <td colspan="2"></td>
+                                    </tr>
+                                    <tr style="height: 10px;">
+                                        <td style="width: 270px;" class="font-weight-normal">Saldo Akhir</td>
+                                        <td style="width: 5px;">:</td>
+                                        <td style="width: 500px;"><input type="text" name="saldoakhir" id="saldoakhir"
+                                                style="width: 250px;" class="form-control form-control-sm"></td>
+                                        <td style="width: 350px;"></td>
+                                        <td style="width: 5px;"></td>
+                                        <td style="width: 5px;"></td>
+                                        <td colspan="2"></td>
+                                    </tr>
+                                    <tr style="height: 10px;">
+                                        <td style="width: 270px;" class="font-weight-normal">Mutasi Debet</td>
+                                        <td style="width: 5px;">:</td>
+                                        <td style="width: 500px;"><input type="text" name="mutasidebet" id="mutasidebet"
+                                                style="width: 250px;" class="form-control form-control-sm"></td>
+                                        <td style="width: 350px;"></td>
+                                        <td style="width: 5px;"></td>
+                                        <td style="width: 5px;"></td>
+                                        <td colspan="2"></td>
+                                    </tr>
+                                    <tr style="height: 10px;">
+                                        <td style="width: 270px;" class="font-weight-normal">Mutasi Kredit</td>
+                                        <td style="width: 5px;">:</td>
+                                        <td style="width: 500px;"><input type="text" name="mutasikredit" id="mutasikredit"
+                                                style="width: 250px;" class="form-control form-control-sm"></td>
+                                        <td style="width: 350px;"></td>
+                                        <td style="width: 5px;"></td>
+                                        <td style="width: 5px;"></td>
+                                        <td colspan="2"></td>
+                                    </tr>
+                                    <tr style="height: 10px;">
+                                        <td style="width: 270px;" class="font-weight-normal">Mutasi Non Cash Debet</td>
+                                        <td style="width: 5px;">:</td>
+                                        <td style="width: 500px;"><input type="text" name="mutasinondebet" id="mutasinondebet" style="width: 250px;" class="form-control form-control-sm"></td>
+                                        <td style="width: 350px;"></td>
+                                        <td style="width: 5px;"></td>
+                                        <td style="width: 5px;"></td>
+                                        <td colspan="2"></td>
+                                    </tr>
+                                    <tr style="height: 10px;">
+                                        <td style="width: 270px;" class="font-weight-normal">Mutasi Non Cash Kredit</td>
+                                        <td style="width: 5px;">:</td>
+                                        <td style="width: 500px;"><input type="text" name="mutasinonkredit" id="mutasinonkredit" style="width: 250px;"
+                                                class="form-control form-control-sm"></td>
+                                        <td style="width: 350px;"></td>
+                                        <td style="width: 5px;"></td>
+                                        <td style="width: 5px;"></td>
+                                        <td colspan="2"></td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="8">
+                                            <hr>
+                                        </td>
+                                    </tr>
+                                    <h6>DENOMINASI COIN</h6>
+                                </table>
+                                <div class="d-flex justify-content-center">
+                                    <button type="button" class="btn btn-primary btn-rounded">Proses</button>
+                                    <button type="button" class="btn btn-primary btn-rounded">Kembali</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <br><br><br>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
