--- a/src/app/cashdrawer/denominasi/denominasi.component.html
+++ b/src/app/cashdrawer/denominasi/denominasi.component.html
@@ -17,7 +17,7 @@
                                         <td class="font-weight-normal">Mata Uang</td>
                                         <td>:</td>
                                         <td>
-                                            <select class="custom-select" name="optmatauang" id="optmatauang" style="width: 200px;">
+                                            <select class="custom-select" name="optmatauang" id="optmatauang" style="width: 200px; height: 34px;">
                                                 <option selected>Pilih Salah Satu</option>
                                                 <option value="1">One</option>
                                                 <option value="2">Two</option>
@@ -90,6 +90,17 @@
                                         </td>
                                     </tr>
                                     <h6>DENOMINASI COIN</h6>
+                                    <tr style="height: 10px;">
+                                            <td style="width: 10px;" class="font-weight-normal">&nbsp;&nbsp;&nbsp;&nbsp;10&nbsp;X</td>
+                                            <td style="width: 5px;">:</td>
+                                            <td style="width: 100px;"><input type="text" name="mutasinonkredit" id="mutasinonkredit" style="width: 250px;"
+                                                    class="form-control form-control-sm"></td>
+                                            <!-- <td style="width: 350px;"></td>
+                                            <td style="width: 5px;"></td>
+                                            <td style="width: 5px;"></td>
+                                            <td colspan="2"></td> -->
+                                            <td style="width: 5px;">&nbsp;&nbsp;koin =</td>
+                                        </tr>
                                 </table>
                                 <div class="d-flex justify-content-center">
                                     <button type="button" class="btn btn-primary btn-rounded">Proses</button>
