--- a/src/app/cashdrawer/denominasi/denominasi.component.html
+++ b/src/app/cashdrawer/denominasi/denominasi.component.html
@@ -90,17 +90,32 @@
                                         </td>
                                     </tr>
                                     <h6>DENOMINASI COIN</h6>
-                                    <tr style="height: 10px;">
-                                            <td style="width: 10px;" class="font-weight-normal">&nbsp;&nbsp;&nbsp;&nbsp;10&nbsp;X</td>
-                                            <td style="width: 5px;">:</td>
-                                            <td style="width: 100px;"><input type="text" name="mutasinonkredit" id="mutasinonkredit" style="width: 250px;"
-                                                    class="form-control form-control-sm"></td>
-                                            <!-- <td style="width: 350px;"></td>
-                                            <td style="width: 5px;"></td>
-                                            <td style="width: 5px;"></td>
-                                            <td colspan="2"></td> -->
-                                            <td style="width: 5px;">&nbsp;&nbsp;koin =</td>
-                                        </tr>
+                                    <div class="col-lg-6">
+                                        <div class="form-group">
+                                            <label class="col-lg-3 control-label" id="label">Orig. Currency:</label>
+                                            <div class="col-lg-1">
+                                                <input type="text" class="form-control input-sm" style="width:70px" name="origcurrency">
+                                            </div>
+                                            <label class="col-lg-4 control-label" id="label">Exchange Rate:</label>
+                                            <div class="col-lg-2">
+                                                <input type="text" class="form-control input-sm" name="exchangerate">
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="col-lg-3 control-label" id="label">TPL.S(II-1):</label>
+                                            <div class="invisible">
+                                                <div class="col-lg-1">
+                                                    <input type="text" class="form-control input-sm">
+                                                </div>
+                                                <label class="col-lg-1 text-info" id="label" style="padding-top:4px;">(Y/N)</label>
+                                            </div>
+                                            <div class="col-lg-3">
+                                                <input type="text" class="form-control input-sm" name="tpls1">
+                                            </div>
+                                            <div class="col-lg-2">
+                                                <input type="text" class="form-control input-sm" style="width:135px" name="tpls2">
+                                            </div>
+                                        </div>
                                 </table>
                                 <div class="d-flex justify-content-center">
                                     <button type="button" class="btn btn-primary btn-rounded">Proses</button>
