--- a/src/app/cashdrawer/denominasi/denominasi.component.html
+++ b/src/app/cashdrawer/denominasi/denominasi.component.html
@@ -8,7 +8,7 @@
                 <div class="card-body">
                     <h5>DENOMINASI</h5>
                     <!-- Default form contact -->
-<!-- 
+
                     <div class="card">
                         <div class="card-body">
                             <form>
@@ -101,7 +101,7 @@
                                             <div class="input-group" style="width: 245px;">
                                                 <input type="text" name="niltrandbt2" id="niltrandbt2" class="form-control form-control-sm" style="width: 245px">
                                                 <span class="align-bottom" >&nbsp;&nbsp;koin =</span>
-                                                <input type="text" name="nilekuivalen2" id="nilekuivalen2" class="form-control form-control-sm" style="width: 245px">
+                                                <!-- <input type="text" name="nilekuivalen2" id="nilekuivalen2" class="form-control form-control-sm" style="width: 245px"> -->
                                             </div>
                                         </td>
                                     </tr>
@@ -113,7 +113,7 @@
                             </form>
                         </div>
                     </div>
-                     -->
+                    
                     <br><br><br>
                 </div>
             </div>
