--- a/src/app/cashdrawer/balancing/balancing.component.html
+++ b/src/app/cashdrawer/balancing/balancing.component.html
@@ -12,27 +12,22 @@
                             <form>
                                 <table class="table table-borderless table-sm"> 
                                     <tr style="height: 10px;">
-                                        <td style="width: 270px;" class="font-weight-normal">User ID</td>
+                                        <td style="width: 170px;" class="font-weight-normal">User ID</td>
                                         <td style="width: 5px;">:</td>
-                                        <td style="width: 95px;">JATENGSP</td>
+                                        <td style="width: 45px;">JATENGSP</td>
                                     </tr>
                                 </table>
-                                <table class="table table-borderless table-sm"> 
-                                  <ul class="nav nav-tabs">
+                                <ul class="nav nav-tabs">
                                     <li class="nav-item">
-                                      <a class="nav-link active" href="#">Active</a>
+                                        <a class="nav-link active" href="#">TELLER CASH BALANCING</a>
                                     </li>
                                     <li class="nav-item">
-                                      <a class="nav-link" href="#">Link</a>
+                                        <a class="nav-link" href="#">RINGKASAN TRANSASKSI</a>
                                     </li>
                                     <li class="nav-item">
-                                      <a class="nav-link" href="#">Link</a>
+                                        <a class="nav-link" href="#">DAFTAR TRANSAKSI</a>
                                     </li>
-                                    <li class="nav-item">
-                                      <a class="nav-link disabled" href="#">Disabled</a>
-                                    </li>
-                                  </ul>
-                                </table>
+                                </ul>
                                 <div class="d-flex justify-content-center">
                                     <button type="button" class="btn btn-primary btn-rounded">Proses</button>
                                     <button type="button" class="btn btn-primary btn-rounded">Kembali</button>
@@ -48,3 +43,6 @@
 
     </div>
 </div>
+<style>
+ .nav-tabs > li > a, .nav-pills > li > a {margin-left:25px;margin-right:27px;}
+</style>
