--- a/src/app/cashdrawer/balancing/balancing.component.html
+++ b/src/app/cashdrawer/balancing/balancing.component.html
@@ -17,17 +17,16 @@
                                         <td style="width: 45px;">JATENGSP</td>
                                     </tr>
                                 </table>
-                                <ul class="nav nav-tabs">
-                                    <li class="nav-item">
-                                        <a class="nav-link active" href="#">TELLER CASH BALANCING</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">RINGKASAN TRANSASKSI</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">DAFTAR TRANSAKSI</a>
-                                    </li>
-                                </ul>
+                                <nav>
+                                    <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                                      <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Home</a>
+                                      <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab" aria-controls="nav-profile" aria-selected="false">Profile</a>
+                                      <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="false">Contact</a>
+                                    </div>
+                                </nav>
+                                <td></td>
+                                <td></td>
+                                <td></td>
                                 <div class="d-flex justify-content-center">
                                     <button type="button" class="btn btn-primary btn-rounded">Proses</button>
                                     <button type="button" class="btn btn-primary btn-rounded">Kembali</button>
